k8s/kafka-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: kafka-controller
    namespace: able-dev
spec:
    replicas: 2
    selector:
        matchLabels:
            app.kubernetes.io/name: kafka
            app.kubernetes.io/component: controller-eligible
    serviceName: kafka-controller-headless
    template:
        metadata:
            labels:
                app.kubernetes.io/name: kafka
                app.kubernetes.io/component: controller-eligible
                app.kubernetes.io/instance: kafka
                app.kubernetes.io/part-of: kafka
        spec:
            containers:
                - name: kafka
                  image: docker.io/bitnami/kafka:3.8.0  # Update to 3.8.0
                  ports:
                      - containerPort: 9093
                        name: controller
                      - containerPort: 9092
                        name: client
                      - containerPort: 9094
                        name: interbroker
                  volumeMounts:
                      - mountPath: /bitnami/kafka
                        name: data
                      - mountPath: /opt/bitnami/kafka/logs
                        name: logs
                      - mountPath: /opt/bitnami/kafka/config/server.properties
                        name: kafka-config
                        subPath: server.properties
                      - mountPath: /tmp
                        name: tmp
            volumes:
                - name: kafka-configmaps
                  configMap:
                      name: kafka-controller-configuration
                - name: kafka-config
                  emptyDir: {}
                - name: tmp
                  emptyDir: {}
                - name: scripts
                  configMap:
                      name: kafka-scripts
                - name: logs
                  emptyDir: {}
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 8Gi
