k8s/auth-service-api.yml
apiVersion: v1
kind: Service
metadata:
    name: auth-service
    namespace: able-dev
spec:
    selector:
        app: auth-microservice
    ports:
        - protocol: TCP
          port: 3001
          targetPort: 3001
    type: ClusterIP
