k8s/gateway-service-api.yml
apiVersion: v1
kind: Service
metadata:
    name: gateway-service
    namespace: able-dev
spec:
    selector:
        app: gateway-microservice
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: ClusterIP
