k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka
    namespace: able-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka
    template:
        metadata:
            labels:
                app: kafka
        spec:
            containers:
                - name: kafka
                  image: bitnami/kafka:3.3.2
                  ports:
                      - containerPort: 9092
                      - containerPort: 29092
                      - containerPort: 9093
                  resources:
                      requests:
                          memory: "512Mi"
                          cpu: "200m"
                      limits:
                          memory: "1Gi"
                          cpu: "500m"
            volumes:
                - name: kafka-configmaps
                  configMap:
                      name: kafka-controller-configuration

---

apiVersion: v1
kind: Service
metadata:
    name: kafka
    namespace: able-dev
spec:
    selector:
        app: kafka
    ports:
        - name: kafka
          port: 9092
          targetPort: 9092
