k8s/notification-service-api.yml
apiVersion: v1
kind: Service
metadata:
    name: notification-service
    namespace: able-dev
spec:
    selector:
        app: notification-microservice
    type: ClusterIP
