k8s/storage-service-api.yml
apiVersion: v1
kind: Service
metadata:
    name: storage-service
    namespace: able-dev
spec:
    selector:
        app: storage-microservice
    ports:
        - protocol: TCP
          port: 3002
          targetPort: 3002
    type: ClusterIP
