k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
    name: web-service
    namespace: able-dev
    labels:
        app: web-microservice
        service: web
    annotations:
        cloud.google.com/neg: '{"ingress": true}'
spec:
    selector:
        app: web-microservice
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 8080
    type: ClusterIP
